// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OpenshiftView Component should display an alternate graph on query-string update: alternate graph 1`] = `
<PageLayout>
  <PageHeader
    productLabel="OpenShift"
    t={[Function]}
  >
    t(curiosity-view.title, [object Object])
  </PageHeader>
  <PageToolbar>
    <Connect(Toolbar)
      filterOptions={
        Array [
          Object {
            "id": "sla",
          },
        ]
      }
      productId="lorem ipsum"
      query={
        Object {
          "dir": "desc",
          "granularity": "daily",
          "limit": 10,
          "offset": 0,
          "sort": "last_seen",
          "uom": "cores",
        }
      }
      viewId="viewOpenShift"
    />
  </PageToolbar>
  <PageSection>
    <Connect(C3GraphCard)
      cardTitle="t(curiosity-graph.cardHeading)"
      filterGraphData={
        Array [
          Object {
            "color": "#06c",
            "fill": "#8bc1f7",
            "id": "cores",
            "isOptional": true,
            "stroke": "#06c",
          },
          Object {
            "id": "thresholdCores",
            "isOptional": true,
          },
        ]
      }
      key="lorem ipsum"
      productId="lorem ipsum"
      productShortLabel="OpenShift"
      query={
        Object {
          "granularity": "daily",
        }
      }
      viewId="viewOpenShift"
    >
      <Select
        ariaLabel="Select option"
        className=""
        id="generatedid-"
        isDisabled={false}
        isToggleText={true}
        name={null}
        onSelect={[Function]}
        options={
          Array [
            Object {
              "title": "t(curiosity-toolbar.uom, [object Object])",
              "value": "cores",
            },
            Object {
              "title": "t(curiosity-toolbar.uom, [object Object])",
              "value": "sockets",
            },
          ]
        }
        placeholder="Select option"
        selectedOptions="cores"
        toggleIcon={null}
        variant="single"
      />
    </Connect(C3GraphCard)>
  </PageSection>
  <PageSection>
    <Connect(InventoryList)
      cardTitle="t(curiosity-inventory.cardHeading)"
      filterGuestsData={
        Array [
          Object {
            "cell": [Function],
            "id": "displayName",
          },
          Object {
            "id": "inventoryId",
          },
          Object {
            "cell": [Function],
            "id": "lastSeen",
          },
        ]
      }
      filterInventoryData={
        Array [
          Object {
            "cell": [Function],
            "id": "displayName",
            "isSortable": true,
          },
          Object {
            "cell": [Function],
            "id": "hardwareType",
            "isSortable": true,
          },
          Object {
            "id": "cores",
            "isOptional": true,
            "isSortable": true,
          },
          Object {
            "cell": [Function],
            "id": "lastSeen",
            "isSortable": true,
          },
        ]
      }
      key="lorem ipsum"
      productId="lorem ipsum"
      query={
        Object {
          "dir": "desc",
          "limit": 10,
          "offset": 0,
          "sort": "last_seen",
          "uom": "cores",
        }
      }
      viewId="viewOpenShift"
    />
  </PageSection>
</PageLayout>
`;

exports[`OpenshiftView Component should have a fallback title: title 1`] = `
<PageLayout>
  <PageHeader
    productLabel="OpenShift"
    t={[Function]}
  >
    t(curiosity-view.title, [object Object])
  </PageHeader>
  <PageToolbar>
    <Connect(Toolbar)
      filterOptions={
        Array [
          Object {
            "id": "sla",
          },
        ]
      }
      productId="lorem ipsum"
      query={
        Object {
          "dir": "desc",
          "granularity": "daily",
          "limit": 10,
          "offset": 0,
          "sort": "last_seen",
          "uom": "cores",
        }
      }
      viewId="viewOpenShift"
    />
  </PageToolbar>
  <PageSection>
    <Connect(GraphCard)
      cardTitle="t(curiosity-graph.cardHeading)"
      filterGraphData={
        Array [
          Object {
            "color": "#06c",
            "fill": "#8bc1f7",
            "id": "cores",
            "isOptional": true,
            "stroke": "#06c",
          },
          Object {
            "id": "thresholdCores",
            "isOptional": true,
          },
        ]
      }
      key="lorem ipsum"
      productId="lorem ipsum"
      productLabel="OpenShift"
      query={
        Object {
          "granularity": "daily",
        }
      }
      viewId="viewOpenShift"
    >
      <Select
        ariaLabel="Select option"
        className=""
        id="generatedid-"
        isDisabled={false}
        isToggleText={true}
        name={null}
        onSelect={[Function]}
        options={
          Array [
            Object {
              "title": "t(curiosity-toolbar.uom, [object Object])",
              "value": "cores",
            },
            Object {
              "title": "t(curiosity-toolbar.uom, [object Object])",
              "value": "sockets",
            },
          ]
        }
        placeholder="Select option"
        selectedOptions="cores"
        toggleIcon={null}
        variant="single"
      />
    </Connect(GraphCard)>
  </PageSection>
  <PageSection>
    <Connect(InventoryList)
      cardTitle="t(curiosity-inventory.cardHeading)"
      filterGuestsData={
        Array [
          Object {
            "cell": [Function],
            "id": "displayName",
          },
          Object {
            "id": "inventoryId",
          },
          Object {
            "cell": [Function],
            "id": "lastSeen",
          },
        ]
      }
      filterInventoryData={
        Array [
          Object {
            "cell": [Function],
            "id": "displayName",
            "isSortable": true,
          },
          Object {
            "cell": [Function],
            "id": "hardwareType",
            "isSortable": true,
          },
          Object {
            "id": "cores",
            "isOptional": true,
            "isSortable": true,
          },
          Object {
            "cell": [Function],
            "id": "lastSeen",
            "isSortable": true,
          },
        ]
      }
      key="lorem ipsum"
      productId="lorem ipsum"
      query={
        Object {
          "dir": "desc",
          "limit": 10,
          "offset": 0,
          "sort": "last_seen",
          "uom": "cores",
        }
      }
      viewId="viewOpenShift"
    />
  </PageSection>
</PageLayout>
`;

exports[`OpenshiftView Component should have default props that set product configuration: filteredGuestsData results 1`] = `
Object {
  "cells": Array [
    <Button
      component="a"
      href="/insights/inventory/lorem inventory id/"
      isInline={true}
      target="_blank"
      variant="link"
    >
      lorem
    </Button>,
    "lorem inventory id",
    <DateFormat
      date="lorem date obj"
    />,
  ],
  "columnHeaders": Array [
    "t(curiosity-inventory.header, [object Object])",
    "t(curiosity-inventory.header, [object Object])",
    "t(curiosity-inventory.header, [object Object])",
  ],
  "data": Object {
    "displayName": Object {
      "title": "t(curiosity-inventory.header, [object Object])",
      "value": "lorem",
    },
    "inventoryId": Object {
      "title": "t(curiosity-inventory.header, [object Object])",
      "value": "lorem inventory id",
    },
    "lastSeen": Object {
      "title": "t(curiosity-inventory.header, [object Object])",
      "value": "lorem date obj",
    },
    "loremIpsum": Object {
      "title": "t(curiosity-inventory.header, [object Object])",
      "value": "hello world",
    },
    "subscriptionManagerId": Object {
      "title": "t(curiosity-inventory.header, [object Object])",
      "value": "lorem subscription id",
    },
  },
}
`;

exports[`OpenshiftView Component should have default props that set product configuration: filteredInventoryData results 1`] = `
Object {
  "cells": Array [
    <Button
      component="a"
      href="/insights/inventory/lorem inventory id/"
      isInline={true}
      target="_blank"
      variant="link"
    >
      lorem
    </Button>,
    <React.Fragment>
      t(curiosity-inventory.hardwareType, [object Object])
       
      <Badge
        isRead={true}
      >
        3
      </Badge>
    </React.Fragment>,
    10,
    12,
    <DateFormat
      date="lorem date obj"
    />,
  ],
  "columnHeaders": Array [
    "t(curiosity-inventory.header, [object Object])",
    "t(curiosity-inventory.header, [object Object])",
    "t(curiosity-inventory.header, [object Object])",
    "t(curiosity-inventory.header, [object Object])",
    "t(curiosity-inventory.header, [object Object])",
  ],
  "data": Object {
    "cores": Object {
      "title": "t(curiosity-inventory.header, [object Object])",
      "value": 12,
    },
    "displayName": Object {
      "title": "t(curiosity-inventory.header, [object Object])",
      "value": "lorem",
    },
    "hardwareType": Object {
      "title": "t(curiosity-inventory.header, [object Object])",
      "value": "ipsum",
    },
    "inventoryId": Object {
      "title": "t(curiosity-inventory.header, [object Object])",
      "value": "lorem inventory id",
    },
    "lastSeen": Object {
      "title": "t(curiosity-inventory.header, [object Object])",
      "value": "lorem date obj",
    },
    "loremIpsum": Object {
      "title": "t(curiosity-inventory.header, [object Object])",
      "value": "hello world",
    },
    "numberOfGuests": Object {
      "title": "t(curiosity-inventory.header, [object Object])",
      "value": 3,
    },
    "sockets": Object {
      "title": "t(curiosity-inventory.header, [object Object])",
      "value": 10,
    },
  },
}
`;

exports[`OpenshiftView Component should have default props that set product configuration: initial configuration 1`] = `
Object {
  "initialGraphFilters": Array [
    Object {
      "color": "#06c",
      "fill": "#8bc1f7",
      "id": "cores",
      "isOptional": true,
      "stroke": "#06c",
    },
    Object {
      "color": "#06c",
      "fill": "#8bc1f7",
      "id": "sockets",
      "isOptional": true,
      "stroke": "#06c",
    },
    Object {
      "id": "thresholdSockets",
      "isOptional": true,
    },
    Object {
      "id": "thresholdCores",
      "isOptional": true,
    },
  ],
  "initialGuestsFilters": Array [
    Object {
      "cell": [Function],
      "id": "displayName",
    },
    Object {
      "id": "inventoryId",
    },
    Object {
      "cell": [Function],
      "id": "lastSeen",
    },
  ],
  "initialInventoryFilters": Array [
    Object {
      "cell": [Function],
      "id": "displayName",
      "isSortable": true,
    },
    Object {
      "cell": [Function],
      "id": "hardwareType",
      "isSortable": true,
    },
    Object {
      "id": "sockets",
      "isOptional": true,
      "isSortable": true,
    },
    Object {
      "id": "cores",
      "isOptional": true,
      "isSortable": true,
    },
    Object {
      "cell": [Function],
      "id": "lastSeen",
      "isSortable": true,
    },
  ],
  "query": Object {
    "dir": "desc",
    "granularity": "daily",
    "limit": 10,
    "offset": 0,
    "sort": "last_seen",
    "uom": "cores",
  },
}
`;

exports[`OpenshiftView Component should render a non-connected component: non-connected 1`] = `
<PageLayout>
  <PageHeader
    productLabel="OpenShift"
    t={[Function]}
  >
    t(curiosity-view.title, [object Object])
  </PageHeader>
  <PageToolbar>
    <Connect(Toolbar)
      filterOptions={
        Array [
          Object {
            "id": "sla",
          },
        ]
      }
      productId="lorem ipsum"
      query={
        Object {
          "dir": "desc",
          "granularity": "daily",
          "limit": 10,
          "offset": 0,
          "sort": "last_seen",
          "uom": "cores",
        }
      }
      viewId="viewOpenShift"
    />
  </PageToolbar>
  <PageSection>
    <Connect(GraphCard)
      cardTitle="t(curiosity-graph.cardHeading)"
      filterGraphData={
        Array [
          Object {
            "color": "#06c",
            "fill": "#8bc1f7",
            "id": "cores",
            "isOptional": true,
            "stroke": "#06c",
          },
          Object {
            "id": "thresholdCores",
            "isOptional": true,
          },
        ]
      }
      key="lorem ipsum"
      productId="lorem ipsum"
      productLabel="OpenShift"
      query={
        Object {
          "granularity": "daily",
        }
      }
      viewId="viewOpenShift"
    >
      <Select
        ariaLabel="Select option"
        className=""
        id="generatedid-"
        isDisabled={false}
        isToggleText={true}
        name={null}
        onSelect={[Function]}
        options={
          Array [
            Object {
              "title": "t(curiosity-toolbar.uom, [object Object])",
              "value": "cores",
            },
            Object {
              "title": "t(curiosity-toolbar.uom, [object Object])",
              "value": "sockets",
            },
          ]
        }
        placeholder="Select option"
        selectedOptions="cores"
        toggleIcon={null}
        variant="single"
      />
    </Connect(GraphCard)>
  </PageSection>
  <PageSection>
    <Connect(InventoryList)
      cardTitle="t(curiosity-inventory.cardHeading)"
      filterGuestsData={
        Array [
          Object {
            "cell": [Function],
            "id": "displayName",
          },
          Object {
            "id": "inventoryId",
          },
          Object {
            "cell": [Function],
            "id": "lastSeen",
          },
        ]
      }
      filterInventoryData={
        Array [
          Object {
            "cell": [Function],
            "id": "displayName",
            "isSortable": true,
          },
          Object {
            "cell": [Function],
            "id": "hardwareType",
            "isSortable": true,
          },
          Object {
            "id": "cores",
            "isOptional": true,
            "isSortable": true,
          },
          Object {
            "cell": [Function],
            "id": "lastSeen",
            "isSortable": true,
          },
        ]
      }
      key="lorem ipsum"
      productId="lorem ipsum"
      query={
        Object {
          "dir": "desc",
          "limit": 10,
          "offset": 0,
          "sort": "last_seen",
          "uom": "cores",
        }
      }
      viewId="viewOpenShift"
    />
  </PageSection>
</PageLayout>
`;
